--- a/style/style_login_register.css
+++ b/style/style_login_register.css
@@ -1,30 +1,77 @@
 body {
+    padding: 0;
+    margin: 0;
+    background: url(../login/fondNoir.jpg);
+
+    background-size: 100%;
+}
+
+.inner-container {
+    min-width: 400px;
+    min-height: 600px;
+    position: absolute;
+    top: calc(35vh - 200px);
+    left: calc(50vw - 200px);
+    overflow: hidden;
     background-color: black;
-    font-family: sans-serif;
 }
 
-p,
-h1 {
-    color: white;
+.box {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    font-family: Helvetica;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.13);
+    padding: 30px 0px;
 }
 
-.wrapper {
+.box h1 {
     text-align: center;
-    background-color: gray;
-    border-radius: 30px;
-    margin: 10% 30% 0%;
-    padding: 1%;
+    margin: 30px 0;
+    font-size: 30px;
 }
 
-input {
+.box input {
+    display: block;
+    width: 300px;
+    margin: 20px auto;
+    padding: 15px;
+    background: rgba(0, 0, 0, 0.2);
+    color: #fff;
+    border: 0;
+    border-bottom: 1px solid white;
+}
+
+.box input:focus,
+.box input:active,
+.box button:focus,
+.box button:active {
     outline: none;
-    border: 3px solid;
-    border-radius: 30px;
-    margin: 3px;
-    padding: 10px;
 }
 
-.birthDate label {
-    color: white;
-    font-family: sans-serif;
+.box button {
+    background: #440342;
+    border-radius: 10px;
+    color: #fff;
+    padding: 10px;
+    font-size: 20px;
+    width: 330px;
+    margin: 20px auto;
+    display: block;
+    cursor: pointer;
+}
+
+.box button:active {
+    background: black;
+}
+
+.box p {
+    font-size: 14px;
+    text-align: center;
+}
+
+.box p span {
+    cursor: pointer;
+    color: #666;
 }
