Recherche dans playlist
ainsi que suppression des anciens fichiers

--- a/style/index.css
+++ b/style/index.css
@@ -349,7 +349,7 @@ main {
 
 .infosPlaylist {
     display: flex;
-    background: linear-gradient(#535353, black);
+    background: linear-gradient(#535353, rgb(18, 18, 18));
 }
 
 .nomPlaylist {
