--- a/style/footer.css
+++ b/style/footer.css
@@ -87,8 +87,6 @@ body {
     width: 10%;
 
     margin-left: 10px;
-
-
 }
 
 #Music>* {
@@ -98,10 +96,24 @@ body {
 
 #Music img {
     width: 50%;
-
 }
 
 #Music #like {
-    width: 20%;
-    margin-left: 30px;
+    font-size: 200%;
+    margin-left: 20px;
+    color: white;
+}
+
+#Music #like:hover {
+    cursor: pointer;
+}
+
+#Music button {
+    all: unset;
+}
+
+#Music #likeDisable {
+    font-size: 200%;
+    margin-left: 20px;
+    color: white;
 }
