--- a/style/style_login_register.css
+++ b/style/style_login_register.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: url(../images/index/fondNoir.jpg);
+    background: url(../login/fondNoir.jpg);
 
     background-size: 100%;
 }
