--- a/style/footer.css
+++ b/style/footer.css
@@ -99,6 +99,21 @@ body {
 }
 
 #Music #likeMusic {
-    margin-left: 40px;
+    font-size: 150%;
+    margin-left: 20px;
+    color: white;
+}
+
+#Music #likeMusic:hover {
     cursor: pointer;
+}
+
+#Music button {
+    all: unset;
+}
+
+#Music #likeDisable {
+    font-size: 150%;
+    margin-left: 20px;
+    color: white;
 }
