--- a/style/index.css
+++ b/style/index.css
@@ -453,6 +453,21 @@ main {
     padding-right: 20px;
 }
 
+.musique button {
+    height: 30px;
+    width: 30px;
+    border: 0px;
+    border-radius: 25%;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #353232;
+    color: white;
+}
+
+.musique button:hover {
+    background-color: #5d366d;
+    transition: all 0.5s ease;
+}
 
 /*formulaire*/
 
