Formulaire ajout musiques to playlist
Fonctionnel, et permet l'implémentation de nouveau formulaires à l'aide de pages PHP externes. Un problème sur les doublons de musiques dans les playlists est à régler

--- a/style/index.css
+++ b/style/index.css
@@ -286,7 +286,7 @@ main {
     justify-content: space-between;
     align-items: center;
     z-index: 1;
-    background-color: rgb(53, 50, 50)
+    background-color: rgb(54 54 54)
 }
 
 .header--buttons--right button {
