--- a/style/formulaire.css
+++ b/style/formulaire.css
@@ -1,4 +1,4 @@
-.formBlur {
+.form-blur {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -11,27 +11,27 @@
     z-index: 2;
 }
 
-.formulaireContainer{
+.formulaire-container{
     width: 50vh;
     height: 60vh;
-    background-color: rgb(53 50 50);
+    background-color: rgb(54 54 54);
     border-radius: 3px;
     text-align: center;
     display: flex;
     flex-direction: column;
 }
 
-.formulaireContainer .crossContain{
+.formulaire-container .cross-form-contain{
     display: flex;
     margin: 1vh;
     flex-direction: row-reverse;
 }
 
-.formulaireContainer .crossContain .cross{
+.cross{
     color:white;
 }
 
-.formulaireContainer .crossContain .cross:hover{
+.cross:hover{
     color: rgb(176, 176, 176);
     transition: all 0.2s ease;
     cursor: pointer;
@@ -91,4 +91,67 @@
 
 .formulaire p {
     margin: 1.5vh;
+}
+
+.formulaire img {
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+}
+
+.formulaire select{
+    margin-left : 10vh;
+    margin-right: 10vh;
+    padding: 10px;
+    background-color: #7a7a7a;
+    border: solid 1px #484848;
+    border-radius: 3px;
+    color: white;
+    font-weight: bold;
+}
+
+.popup-container {
+    position: absolute;
+    bottom: 80px;
+    left: 0;
+    height:60px;
+    width:100%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    visibility: visible;
+}
+
+.popup {
+    background-color:#3c2346;
+    border-radius: 5px;
+    height: auto;
+    width: 50%;
+    margin: 5px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.popup .cross{
+    height: 2vh;
+    font-size: 2vh;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 1vh;
+    margin-left: 1vh;
+}
+.popup p {
+    margin: auto;
+}
+
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.2s linear;
+}
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.2s, opacity 0.2s linear;
 }
