--- a/style/footer.css
+++ b/style/footer.css
@@ -20,8 +20,8 @@ body {
 #barAudio #buttonAudio {
     display: flex;
     justify-content: center;
-    margin-top: 3.5vh;
-    margin-bottom: 2vh;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
@@ -95,7 +95,6 @@ body {
 }
 
 #Music #likeMusic {
-<<<<<<< HEAD
     font-size: 150%;
     margin-left: 20px;
     color: white;
@@ -104,7 +103,6 @@ body {
 
 #Music .disable {
     display: none;
-=======
     margin-left: 40px;
     cursor: pointer;
 }
@@ -115,5 +113,4 @@ body {
 
 #infoMusic p{
     color: #B3B3B3;
->>>>>>> ca2ffc3de89f4be7e625a0f018b3155633ad5d98
 }
