--- a/style/styleSearch.css
+++ b/style/styleSearch.css
@@ -17,9 +17,10 @@ body {
 }
 
 .searchTerm {
+  background-color: #dddddd;
   width: 100%;
   height: 36px;
-  border: 3px solid black;
+  border: 2px solid black;
   border-right: none;
   padding: 5px;
   border-radius: 5px 0 0 5px;
