--- a/style/formulaire.css
+++ b/style/formulaire.css
@@ -51,12 +51,16 @@
     height: 5vh;
     margin-left: auto;
     margin-right: auto;
-
+    margin-top: 5px;
     background-color: #5d366d;
     border: solid 1px black;
     color: white;
     border-radius: 3px;
     font-weight: bold;
+}
+
+.formulaire a{
+    color:#9156a8;
 }
 
 .formulaire button:hover {
@@ -72,6 +76,8 @@
     color: white;
     padding: 7px;
     font-weight: bold;
+    margin-left: 5vh;
+    margin-right: 5vh;
     
 }
 
@@ -82,6 +88,8 @@
     color: white;
     padding: 7px;
     font-weight: bold;
+    margin-left: 5vh;
+    margin-right: 5vh;
     
 }
 
