--- a/style/index.css
+++ b/style/index.css
@@ -356,6 +356,8 @@ main {
 
 .label {
     padding: 10px;
+    font-size: 150%;
+    text-align: center;
 }
 
 /*Haut Playlist*/
@@ -533,6 +535,79 @@ main {
 .user button:hover {
     background-color: #5d366d;
     transition: all 0.5s ease;
+}
+
+.labelUser {
+    padding: 10px;
+    text-align: center;
+    font-size: 150%;
+}
+
+/*Suggestions*/
+
+.suggestions {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 80px;
+}
+
+.suggestionsContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.suggestion {
+    display: flex;
+    height: 110px;
+}
+
+.suggestion:hover {
+    background-color: #2b2b2b;
+    transition: all 0.5s ease;
+}
+
+.texteSuggestion {
+    flex: auto;
+    padding: 5px;
+}
+
+.texteSuggestion .musiqueSuggestion {
+    font-size: 140%;
+    display: auto;
+}
+
+.texteSuggestion .artisteSuggestion,
+.texteSuggestion .commentaireSuggestion {
+    color: #B3B3B3;
+    padding-top: 0.5%;
+}
+
+.texteSuggestion .utilisateurSuggestion {
+    color: #B3B3B3;
+    font-size: 80%;
+    padding-top: 1%;
+}
+
+.suggestion button {
+    height: 30px;
+    width: 30px;
+    border: 0px;
+    border-radius: 25%;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #353232;
+    color: white;
+}
+
+.suggestion button:hover {
+    background-color: #5d366d;
+    transition: all 0.5s ease;
+}
+
+.labelSuggestion {
+    padding: 10px;
+    text-align: center;
+    font-size: 150%;
 }
 
 /*formulaire*/
