--- a/style/formulaire.css
+++ b/style/formulaire.css
@@ -51,7 +51,7 @@
     height: 5vh;
     margin-left: auto;
     margin-right: auto;
-
+    margin-top: 5px;
     background-color: #5d366d;
     border: solid 1px black;
     color: white;
@@ -65,6 +65,10 @@
     transition: all 0.2s ease;
 }
 
+.formulaire a{
+    color:#9156a8;
+}
+
 .formulaire input[type="text" i] {
     background-color: #8d8b8b;
     border: solid 1px #484848;
@@ -72,6 +76,8 @@
     color: white;
     padding: 7px;
     font-weight: bold;
+    margin-left: 5vh;
+    margin-right: 5vh;
     
 }
 
@@ -82,6 +88,8 @@
     color: white;
     padding: 7px;
     font-weight: bold;
+    margin-left: 5vh;
+    margin-right: 5vh;
     
 }
 
@@ -122,6 +130,28 @@
     visibility: visible;
 }
 
+.formulaire input[type="submit" i] {
+    display: block;
+    width: 15vh;
+    height: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    background-color: #5d366d;
+    border: solid 1px black;
+    color: white;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.formulaire input[type="submit" i]:hover {
+    background-color:#3c2346;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+/*POPUP*/
+
 .popup {
     background-color:#3c2346;
     border-radius: 5px;
@@ -155,3 +185,4 @@
     opacity: 0;
     transition: visibility 0s 0.2s, opacity 0.2s linear;
 }
+
