--- a/style/index.css
+++ b/style/index.css
@@ -263,6 +263,13 @@ body {
     opacity: 1;
 }
 
+.sidebar .playlist-sidebar-img{
+    opacity: 1;
+    object-fit: cover;
+    height: 25px;
+    width: 25px;
+}
+
 main {
     padding: 60px 0px 11px 230px;
     max-height: 100vh;
