--- a/style/index.css
+++ b/style/index.css
@@ -334,6 +334,60 @@ main {
     margin-right: 10px;
 }
 
+/* search bar */
+.wrap {
+    position: fixed;
+    top: 0;
+    font-size: 150%;
+}
+
+.search {
+    width: 100%;
+    display: flex;
+}
+
+.searchTerm {
+    background-color: #dddddd;
+    width: 100%;
+    height: 36px;
+    border: 2px solid black;
+    border-right: none;
+    padding: 5px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+
+.searchTerm:focus {
+    color: black;
+}
+
+.searchButton {
+    width: 40px;
+    height: 36px;
+    border: 1px solid black;
+    background: black;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrapSearch {
+    width: 30%;
+    position: fixed;
+    left: 40%;
+    /*transform: (-50%, 50%);*/
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+}
+
 ::-webkit-scrollbar {
     width: 16px;
 }
