--- a/style/index.css
+++ b/style/index.css
@@ -463,29 +463,6 @@ main {
     padding: 10px;
 }
 
-/*Haut Playlist*/
-
-.infosPlaylist {
-    display: flex;
-    background: linear-gradient(grey, #1c1c1c);
-}
-
-.nomPlaylist {
-    font-size: 300%;
-}
-
-.imagePlaylist {
-    width: 220px;
-}
-
-.imagePlaylist img {
-    width: 220px;
-}
-
-.texteInfoPlaylist {
-    padding-left: 20px;
-}
-
 /*Musique*/
 
 .musiquesPlaylist {
@@ -527,6 +504,10 @@ main {
 
 /*Playlist */
 
+.playlistIndex {
+    width: 200px;
+}
+
 .playlistIndex:hover {
     background-color: #2b2b2b;
     transition: all 0.5s ease;
@@ -553,6 +534,8 @@ main {
     color: white;
     padding: 5px;
     font-size: 140%;
+    width: 200px;
+    overflow: hidden
 }
 
 .auteurPlaylistIndex {
